# Cliente_Biblioteca/Cliente.php
@@ -1,40 +1,65 @@
 <?php
-require "requisicoes.php";
+require "cliente_back.php";
+require 'vendor/autoload.php';
+use GuzzleHttp\Client as GuzzleClient;
+use GuzzleHttp\Exception\ClientException;
 
-$url_api = "localhost:8000/api";
 $options = array(
-    "1" => "Listar livros",
-    "2" => "Cadastrar Livro",
-    "3" => "Exibir Livro",
-    "4" => "Editar Livro",
-    "5" => "Deletar Livro",
-    "6" => "Sair"                
+    "1" => "Logar",
+    "2" => "Listar livros",
+    "3" => "Cadastrar Livro #",
+    "4" => "Exibir Livro",
+    "5" => "Editar Livro #",
+    "6" => "Deletar Livro #",
+    "7" => "Sair"                
 );
 
-// Aqui, temos o email de um suposto usuário logado sendo passado por padrão no corpo do formulário
 $formulario_base = array(
-    "email" => "admin@admin.com",
     "titulo" => "",
     "autor" => "",
     "descricao" => "",
     "editora" => "",
     "genero" => "",
-    "Authorization:" => "Bearer {token}"
 );
 
-popen("cls","w");
-$logado = false;//fazer algo com isso depois
-while(true){
+$cabecalho_base = array(
+    "Content_type" => "application/json",
+    "Authorization" => "Bearer "
+);
 
+$cliente_API =  new GuzzleClient([
+    'base_uri' => "localhost:8000"
+]);
+
+popen("cls","w");
+$logado = false;
+while(true){
     echo "|----------Biblioteca_IFRN----------|\n";
+
     foreach($options as $key => $value){
-        echo $key ."-". $value ."\n";
+        if($logado){
+            $value = str_replace("#", "", $value);
+            echo $key ."-". $value ."\n";
+        }else{
+            echo $key ."-". $value ."\n";
+        }
     }
     $option = readline();
     switch($option){
         case "1":
-            $resp = enviar_requisicao("$url_api/livros");
-            $resp_json = json_decode($resp['corpo'], true);
+            popen("cls","w");
+            echo"\n-----Login-----\n";
+            echo "Digite sua matricula:\n";
+            $matricula = readline();
+            echo "Digite sua senha:\n";
+            $senha = Seld\CliPrompt\CliPrompt::hiddenPrompt();
+            $token = login($matricula, $senha);
+            $cabecalho_base["Authorization"] = "Bearer ".$token;
+            $logado = true;
+        break;
+        case "2":
+            $resp = $cliente_API->get('/api/livros');
+            $resp_json = json_decode($resp->getBody()->getContents(), true);
 
             echo "\n-----".$resp_json['message']."-----\n";
             foreach ($resp_json["result"] as $item) {
@@ -42,7 +67,7 @@ while(true){
             }
             echo"\n";
             break;
-        case "2":
+        case "3":
             popen("cls","w");
             echo"\n-----Cadastro de Livro-----\n";
             $form = $formulario_base;
@@ -58,34 +83,36 @@ while(true){
             foreach($dados as $key => $value){
                 $form[$key] = $value;
             }
-
-            $resp = enviar_requisicao("$url_api/livros",
-                metodo: "POST",
-                corpo: json_encode($form),
-                cabecalhos: ['Content-type:application/json']
-            );
-
-            if($resp['codigo'] == "201"){
-                echo "--LIVRO CADASTRADO COM SUCESSO--\n";
-            }else if($resp['codigo'] == "400"){
-                echo "--USUARIO PRECISA ESTAR LOGADO--\n";
+            try{
+                $resp = $cliente_API->post('/api/livros',[
+                    'headers' => $cabecalho_base,
+                    'json' => $form
+                ]);
+            }catch(ClientException  $e){
+                if($e->getResponse()->getStatusCode() == 401){
+                    echo "--VOCE PRECISA ESTAR AUTENTICADO--\n";
+                }
+                break;
             }
+            echo "--LIVRO CADASTRADO COM SUCESSO--\n";
 
             break;
-        case "3":
+        case "4":
             popen("cls","w");
             echo"\n-----Exibir Livro-----\n";
             echo "Digite o id do livro\n";
             $id = intval(readline());
-            $resp = enviar_requisicao("$url_api/livros/{$id}");
-
-            if($resp['codigo'] == "200"){
-                echo "--LIVRO ENCONTRADO--\n";
-            }else if($resp['codigo'] == "502"){
-                echo "--O LIVRO NAO EXISTE--\n";
+            try{
+                $resp = $cliente_API->get("/api/livros/{$id}");
+            }catch(ClientException  $e){
+                if($e->getResponse()->getStatusCode() == 404){
+                    echo "--O LIVRO NAO EXISTE--\n";
+                }
                 break;
             }
-            $resp_json = json_decode($resp['corpo'], true);
+            echo "--LIVRO ENCONTRADO--\n";
+            
+            $resp_json = json_decode($resp->getBody()->getContents(), true);
 
             echo "\n-----".$resp_json['message']."-----\n";
             
@@ -97,64 +124,90 @@ while(true){
             }
             echo "\n";
             break;
-        case "4":
+        case "5":
             popen("cls","w");
             echo"\n-----Editar Livro-----\n";
             echo "Digite o id do livro\n";
             $id = intval(readline());
-            $resp = enviar_requisicao("$url_api/livros/{$id}");
 
-            if($resp['codigo'] == "200"){
-                $resp_json = json_decode($resp['corpo'], true);
-                $form = $formulario_base;
-
-                echo "\n----Livro----\n";
-                echo "**Mantenha o campo vazio caso não deseje editar**\n";
-                $edicoes = [];
-                foreach($resp_json['result'] as $key => $value){
-                    if($key == "id" || $key == "remember_token" || $key == "created_at" || $key == "updated_at"){
-                        continue;
-                    }
-                    echo ucfirst($key) . ": " . $value . "\n";
-                    $aux = readline();
-
-                    if ($aux !== '') {
-                        $edicoes[$key] = $aux;
-                    }else{
-                        $form[$key] = $value;
-                    }
+            try{
+                $resp = $cliente_API->get("/api/livros/{$id}");
+            }catch(ClientException  $e){
+                if($e->getResponse()->getStatusCode() == 404){
+                    echo "--O LIVRO NAO EXISTE--\n";
                 }
-                foreach ($edicoes as $key => $value) {
+                break;
+            }
+            
+            $resp_json = json_decode($resp->getBody()->getContents(), true);
+            $form = $formulario_base;
+
+            echo "\n----Livro----\n";
+            echo "**Mantenha o campo vazio caso não deseje editar**\n";
+            $edicoes = [];
+            foreach($resp_json['result'] as $key => $value){
+                if($key == "id" || $key == "remember_token" || $key == "created_at" || $key == "updated_at"){
+                    continue;
+                }
+                echo ucfirst($key) . ": " . $value . "\n";
+                $aux = readline();
+
+                if ($aux !== '') {
+                    $edicoes[$key] = $aux;
+                }else{
                     $form[$key] = $value;
                 }
-                $resp = enviar_requisicao("$url_api/livros/{$id}",
-                    metodo: "PUT",
-                    corpo: json_encode($form),
-                    cabecalhos: ['Content-type:application/json']
-                );
-                echo "-----LIVRO EDITADO COM SUCESSO----\n";
-                break;
-            }else if($resp['codigo'] == "502"){
-                echo "--LIVRO NÃO ENCONTRADO--\n";
+            }
+            foreach ($edicoes as $key => $value) {
+                $form[$key] = $value;
+            }
+            
+            try{
+                $resp = $cliente_API->put("/api/livros/{$id}",[
+                    'headers' => $cabecalho_base,
+                    'json' => $form
+                ]);
+            }catch(ClientException  $e){
+                if($e->getResponse()->getStatusCode() == 401){
+                    echo "--VOCE PRECISA ESTAR AUTENTICADO--\n";
+                }
                 break;
             }
 
+            if($resp->getStatusCode() == "200"){
+                echo "-----LIVRO EDITADO COM SUCESSO----\n";
+            }
+
             break;
-        case "5":
+        case "6":
             popen("cls","w");
             echo"\n-----Excluir Livro-----\n";
             echo "Digite o id do livro\n";
             $id = intval(readline());
-            $resp = enviar_requisicao("$url_api/livros/{$id}", metodo: "HEAD");
+            try{
+                $resp = $cliente_API->head("/api/livros/{$id}");
+            }catch(ClientException  $e){
+                if($e->getResponse()->getStatusCode() == 404){
+                    echo "--LIVRO NÃO EXISTE--\n";
+                }
+                break;
+            }
 
-            if($resp['codigo'] == "200"){
-                $resp = enviar_requisicao("$url_api/livros/{$id}", metodo: "DELETE");
+            if($resp->getStatusCode() == "200"){
+                try{
+                    $resp = $cliente_API->delete("/api/livros/{$id}",[
+                    'headers' => $cabecalho_base
+                    ]);
+                }catch(ClientException  $e){
+                    if($e->getResponse()->getStatusCode() == 401){
+                        echo "--VOCE PRECISA ESTAR AUTENTICADO--\n";
+                    }
+                    break;
+                }
                 echo "--LIVRO DELETADO--\n";
-            }else if($resp['codigo'] == "502"){
-                echo "--LIVRO NÃO ENCONTRADO--\n";
             }
             break;
-        case "6":   
+        case "7":   
             return false;
             break;
         default:
